# EcoWatt_TeamPowerPort

./: .flows.json.backup  .gitignore  .gitignore.backup  COMMAND_API_REFERENCE.md  COMMAND_EXECUTION_COMPLETE.md  COMMAND_EXECUTION_DOCUMENTATION.md  COMMAND_EXECUTION_README.md  COMMAND_EXECUTION_SUMMARY.md  COMMAND_PERCENTAGE_FIX.md  COMMAND_QUICKSTART.md  COMMAND_QUICK_START.md  COMMAND_TEST_RESULTS.md  COMPLETE_STATUS.md  DELIVERABLES_COMMAND_EXECUTION.md  DEMO_GUIDE.md  FAULT_RECOVERY_CHECKLIST.md  FAULT_RECOVERY_INTEGRATION_SUMMARY.md  FAULT_RECOVERY_QUICK_REF.md  FAULT_RECOVERY_TESTING_GUIDE.md  FINAL_SPRINT.md  FOTA_DOCUMENTATION.md  FOTA_IMPLEMENTATION_COMPLETE.md  FOTA_QUICK_REFERENCE.md  In21-EN4440-API Service Documentation.txt  NETWORK_FIX.md  PERIPHERAL_POWER_GATING_REPORT.md  PHASE4_ANALYSIS.md  PHASE4_COMPLETE_SUMMARY.md  PHASE4_FINAL_SUMMARY.md  PHASE4_PROGRESS.md  PHASE4_PROGRESS_SUMMARY.md  PHASE4_QUICK_START.md  PHASE4_README.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  POWER_MANAGEMENT_CPU Frequency Scaling.md  PROJECT_STATUS_SUMMARY.md  QUICK_FIX_README.md  (+20 more)
Milestone1/cpp/: CMakeLists.txt  ecowatt
Milestone1/cpp/docs/: Doxyfile
Milestone1/cpp/include/core/application/: Coordinator.h
Milestone1/cpp/include/core/drivers/: Debug.h  ProtocolAdapter.h
Milestone1/cpp/include/core/hal/: time.h
Milestone1/cpp/include/core/peripheral/: Acquisition.h  BlockingQueue.h  RingBuffer.h  Timers.h  Uploader.h
Milestone1/cpp/include/sim/: CloudStub.h  InverterSim.h
Milestone1/cpp/src/: main.cpp
Milestone1/cpp/src/core/: Acquisition.cpp  Acquisition.h  BlockingQueue.h  Coordinator.h  RingBuffer.h  Timers.cpp  Timers.h  Uploader.cpp  Uploader.h
Milestone1/cpp/src/core/application/: Coordinator.cpp
Milestone1/cpp/src/core/drivers/: Debug.cpp  ProtocolAdapter.cpp
Milestone1/cpp/src/core/hal/: time.cpp
Milestone1/cpp/src/core/peripheral/: Acquisition.cpp  Timers.cpp  Uploader.cpp
Milestone1/cpp/src/sim/: CloudStub.cpp  CloudStub.h  InverterSim.cpp  InverterSim.h
fw/fw_ecowatt/main/: CMakeLists.txt  main.c
fw/fw_ecowatt/main/include/driver/: debug_out.h  delay.h  protocol_adapter.h
fw/fw_ecowatt/main/include/hal/: esp32.h
fw/fw_ecowatt/main/include/peripheral/: acquisition.h  print.h  timers_util.h
fw/fw_ecowatt/main/src/driver/: debug_out.c  (+1 more)
(+425 files in other folders)
