idf_component_register(
    SRCS
        "main.c"
        "src/peripheral/acquisition.c"
        "src/peripheral/timers_util.c"
        "src/driver/debug_out.c"
        "src/driver/protocol_adapter.c"
        "src/hal/esp32.c"
    INCLUDE_DIRS
        "."
        "include"
        "include/driver"
        "include/hal"
        "include/peripheral"
)
